# micro-banking-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  GITHUB_ISSUE.md  GITHUB_PR.md  ISSUE_DESCRIPTION.md  ISSUE_PRISMA6_WINDOWS_COMPILED_SIDECAR.md  ISSUE_WINDOWS_PROD_STYLE_REGRESSION.md  LICENSE  PR.md  PR_BUN_SIDECAR_PRISMA6.md  README.md  SECURITY.md  business_logic.md  issue.md  package-lock.json  package.json  point.md  walkthrough.md
.github/: copilot-instructions.md
.github/workflows/: build-multi-platform.yml  ci.yml  release-tag-v0.0.1.yml  release-tag.yml  windows-build.yml
.llm/: README.md  workflow_rules.md
.llm/bug-account-expiration/: PR_bug_account_expiration_fixes.md  issue.md
.llm/bug-admin-status-activity-tracking/: PR_bug_admin_status_activity_tracking.md  issue.md
.llm/bug-frontend-session-expiration/: PR_bug_frontend_session_expiration.md  issue.md
.llm/bug-refresh-interval-effect/: PR_bug_refresh_interval_effect.md  issue.md
client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/capabilities/: default.json
desktop/resources/: schema.prisma
desktop/src/: lib.rs  main.rs
scripts/: copy-local-engine.ts  nuke-build-macos.sh  nuke-build.ps1  nuke-build.sh  stage-tauri-runtime.ts  test-server.js
server/: .env  .prettierignore  database.db  eslint.config.js  eslint.config.mjs  jest.config.js  micro_banking.db  package-lock.json  package.json  prisma.config.ts
(+161 files in other folders)
